# django_orders_test

./: .gitignore  README.md  pyproject.toml
django_orders/: conftest.py  manage.py
django_orders/django_orders/: .env.dist  asgi.py  settings.py  urls.py  wsgi.py
django_orders/fixtures/: orderitems.json  orders.json  orderstatuses.json  payments.json  products.json
django_orders/orders/: admin.py  apps.py  models.py  routers.py  serializers.py  tests.py  views.py
django_orders/orders/migrations/: 0001_initial.py  0002_order_payment_dt.py
django_orders/payments/: admin.py  apps.py  models.py  routers.py  serializers.py  tests.py  urls.py  views.py
django_orders/payments/migrations/: 0001_initial.py  0002_alter_payment_payment_type.py  0003_alter_payment_payment_type.py
django_orders/products/: __init__.py  apps.py  custom_validators.py  models.py  routers.py  serializers.py  tests.py  urls.py  views.py
django_orders/products/migrations/: 0001_initial.py
django_orders/services/: __init__.py  external_requests.py  tests.py
