[tool.poetry]
name = "django-orders-test"
version = "0.1.0"
description = ""
authors = ["vlf0 <dr.dnb2000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "5.1.2"
djangorestframework = "3.15.2"
django-environ = "0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
