[tool.poetry]
name = "django-orders-test"
version = "0.1.0"
description = ""
authors = ["vlf0 <dr.dnb2000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "5.1.2"
djangorestframework = "3.15.2"
django-environ = "0.11.2"
ruff = "0.6.9"
pytest = "8.3.3"
pytest-django = "4.9.0"
pytest-cov = "5.0.0"
psycopg2-binary = "2.9.9"
pillow = "10.4.0"
mypy = "1.11.2"
django-stubs = "5.1.0"
requests = "2.32.3"
django-debug-toolbar = "4.4.6"

[tool.pytest.ini_options]
addopts = "-q --cov --cov-config=.coveragerc"
DJANGO_SETTINGS_MODULE = "django_orders.settings"
python_files = "test.py tests.py"

[tool.coverage.run]
branch = true
source = ["products", "orders", "payments"]

[tool.ruff]
output-format = "grouped"

[tool.ruff.format]
docstring-code-format = true
exclude = [".venv", "manage.py"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"